--- a/package.json
+++ b/package.json
@@ -7,14 +7,23 @@
     "ios": "react-native run-ios",
     "lint": "eslint .",
     "start": "react-native start",
-    "test": "jest"
+    "test": "jest",
+    "server": "json-server --watch ./server/db.json --port 3005"
   },
   "dependencies": {
+    "@react-navigation/native": "^6.1.7",
+    "@react-navigation/native-stack": "^6.9.13",
+    "axios": "^1.4.0",
     "babel-plugin-parameter-decorator": "^1.0.16",
+    "json-server": "^0.17.3",
     "react": "18.2.0",
     "react-native": "0.72.3",
+    "react-native-safe-area-context": "^4.7.1",
+    "react-native-screens": "^3.24.0",
     "react-obsidian": "^1.4.0",
-    "reflect-metadata": "^0.1.13"
+    "react-query": "^3.39.3",
+    "reflect-metadata": "^0.1.13",
+    "zustand": "^4.4.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
