--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "lint": "eslint .",
     "start": "react-native start",
     "test": "jest",
-    "server": "json-server --watch ./server/db.json --port 3005"
+    "server": "json-server --watch ./server/db.json --port 3005 --host 192.168.1.16"
   },
   "dependencies": {
     "@react-navigation/native": "^6.1.7",
