--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.4.0",
     "babel-plugin-parameter-decorator": "^1.0.16",
     "json-server": "^0.17.3",
+    "lodash": "^4.17.21",
     "react": "18.2.0",
     "react-native": "0.72.3",
     "react-native-safe-area-context": "^4.7.1",
@@ -33,6 +34,7 @@
     "@react-native/eslint-config": "^0.72.2",
     "@react-native/metro-config": "^0.72.9",
     "@tsconfig/react-native": "^3.0.0",
+    "@types/lodash": "^4.14.197",
     "@types/react": "^18.0.24",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.2.1",
