--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
+    "@shopify/flash-list": "^1.5.0",
     "axios": "^1.4.0",
     "babel-plugin-parameter-decorator": "^1.0.16",
     "json-server": "^0.17.3",
