--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "json-server": "^0.17.3",
     "lodash": "^4.17.21",
     "react": "18.2.0",
+    "react-hook-form": "^7.45.4",
     "react-native": "0.72.3",
     "react-native-safe-area-context": "^4.7.1",
     "react-native-screens": "^3.24.0",
@@ -48,5 +49,8 @@
   },
   "engines": {
     "node": ">=16"
+  },
+  "resolutions": {
+    "@react-navigation/native": "^6.1.7"
   }
 }
