--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@react-native/metro-config": "^0.72.9",
     "@testing-library/react-native": "^12.2.2",
     "@tsconfig/react-native": "^3.0.0",
+    "@types/jest": "^29.5.4",
     "@types/lodash": "^4.14.197",
     "@types/react": "^18.0.24",
     "@types/react-test-renderer": "^18.0.0",
