--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@shopify/flash-list": "^1.5.0",
     "axios": "^1.4.0",
     "babel-plugin-parameter-decorator": "^1.0.16",
+    "jest-mock-extended": "^3.0.5",
     "json-server": "^0.17.3",
     "lodash": "^4.17.21",
     "react": "18.2.0",
@@ -38,12 +39,14 @@
     "@testing-library/react-native": "^12.2.2",
     "@tsconfig/react-native": "^3.0.0",
     "@types/jest": "^29.5.4",
+    "@types/jest-when": "^3.5.2",
     "@types/lodash": "^4.14.197",
     "@types/react": "^18.0.24",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.2.1",
     "eslint": "^8.19.0",
     "jest": "^29.2.1",
+    "jest-when": "^3.6.0",
     "metro-react-native-babel-preset": "0.76.7",
     "prettier": "^2.4.1",
     "react-test-renderer": "18.2.0",
