🎢 Implement type aliases and tests for components

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,10 @@
 {
   "extends": "@tsconfig/react-native/tsconfig.json",
   "compilerOptions": {
+    "baseUrl": "." /* Base directory to resolve non-absolute module names. */,
+    "paths": {
+      "~*": ["./src/*"]
+    },
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true
   }
