--- a/package.json
+++ b/package.json
@@ -44,8 +44,10 @@
     "@types/react": "^18.0.24",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.2.1",
+    "babel-plugin-module-resolver": "^5.0.0",
     "eslint": "^8.19.0",
     "jest": "^29.2.1",
+    "jest-transform-stub": "^2.0.0",
     "jest-when": "^3.6.0",
     "metro-react-native-babel-preset": "0.76.7",
     "prettier": "^2.4.1",
